# NolosNNUE

./: .gitignore  CMakeLists.txt  README.md  gamecode2in.py  gen_dataset.ps1  pbrain-nolosnnue_py.bat  psq2in.py  pyproject.toml
cmake/: FindONNXRuntime.cmake
src/: main.cpp  piskvork_proto.cpp  piskvork_proto.h
src/agent/: negamax.cpp  negamax.h  player.h  random_player.cpp  random_player.h
src/eval/: classic.cpp  classic.h  evaluator.h  onnx.cpp  onnx.h
src/game/: gomoku.cpp  gomoku.h
src/selfplay/: data_collector.cpp  data_collector.h  random_negamax.cpp  random_negamax.h  run.cpp
train/: game.py  nolos_player.py  piskvork_proto.py  player.py  train.py
train/dataset/: datamodule.py
train/model/: convnet.py  td3bc.py
